--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<ng-http-loader></ng-http-loader>
+<!-- <ng-http-loader></ng-http-loader> -->
