--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" [routerLink]="['']"
-      ><img class="logo" src="assets/images/git-hub-logo.png" alt="Github"
-    /></a>
+    <a class="navbar-brand" href="#" [routerLink]="['']"><b>GitHub</b></a>
     <button
       class="navbar-toggler"
       type="button"
